# ldjam56

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README.org  flake.nix
.github/workflows/: build_nix.yml  c-cpp.yml  cmake.yml  cpp-linter.yml  emcmake.yml  main.yml
exts/: CMakeLists.txt
exts/bullet3/: CMakeLists.txt
resources/: scene.yaml
resources/Bots/: BotInterface.hpp
resources/Shaders/: FxaaFragment.glsl  TaaFragment.glsl  backgroundFragment.glsl  bloomCombineFragment.glsl  bloomDownFragment.glsl  bloomUpFragment.glsl  brdfFragment.glsl  cubeFragment.glsl  cubeMapVertex.glsl  cubeVertex.glsl  equirectangularToCubemapFragment.glsl  extractBrightFragment.glsl  fragment.glsl  fragment_crt.glsl  fragment_instanced.glsl  fragment_quad.glsl  irradianceFragment.glsl  lightFragment.glsl  lightVertex.glsl  meshFragment.glsl  meshVertex.glsl  particleFragment.glsl  particleVertex.glsl  pbrLightFragment.glsl  pbrMeshFragment.glsl  prefilterFragment.glsl  quadFragment.glsl  quadVertex.glsl  shadowFragment.glsl  shadowVertex.glsl  vertex.glsl  vertex2D.glsl  vertex_crt.glsl  vertex_instanced.glsl  vertex_quad.glsl
resources/js/: HandleTouchMove.js
resources/libwasm/: game.js  index.html  libdotnet.js
src/: main.cpp
src/Engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Core.cpp  Core.hpp  Gui.cpp  Gui.hpp  InputManager.cpp  InputManager.hpp  SceneLoader.cpp  SceneLoader.hpp  Singleton.hpp  Window.cpp  Window.hpp  engine_pch.hpp
src/Engine/ECS/: ECSManager.cpp  ECSManager.hpp  Entity.cpp  Entity.hpp
src/Engine/ECS/Components/: AnimationComponent.hpp  Component.hpp  DebugComponent.cpp  DebugComponent.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  HealthComponent.cpp  LightingComponent.cpp  LightingComponent.hpp  ParticlesComponent.cpp  ParticlesComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  SeeingComponent.cpp  SeeingComponent.hpp
src/Engine/ECS/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  LightingSystem.cpp  LightingSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PositionSystem.cpp  PositionSystem.hpp  SeeingSystem.cpp  System.cpp  System.hpp
src/Engine/Managers/: FrameBufferManager.cpp  FrameBufferManager.hpp  TextureManager.cpp  TextureManager.hpp
src/Engine/MapLoader/: MapLoader.cpp  MapLoader.hpp
src/Engine/Objects/: Cube.cpp  Cube.hpp  GltfObject.cpp  GltfObject.hpp  GraphicsObject.cpp  GraphicsObject.hpp  Heightmap.cpp  Heightmap.hpp  InstancedQuadManager.cpp  Line.cpp  Line.hpp  Mesh.cpp  Mesh.hpp  Point.cpp  Point.hpp  Quad.cpp  Quad.hpp  ScreenQuad.cpp
src/Engine/Physics/: SAT.hpp  Shape.cpp  Shape.hpp
src/Engine/RenderPasses/: BloomPass.cpp  BloomPass.hpp  CubeMapPass.cpp  CubeMapPass.hpp  DebugPass.cpp  DebugPass.hpp  FrameGraph.cpp  FrameGraph.hpp  FxaaPass.cpp  FxaaPass.hpp  GeometryPass.cpp  GeometryPass.hpp  LightPass.cpp  LightPass.hpp  ParticlePass.cpp  ParticlePass.hpp  RenderPass.cpp  RenderPass.hpp  RenderUtil.hpp  ShadowPass.cpp  ShadowPass.hpp  TaaPass.cpp  TaaPass.hpp
src/Engine/Rendering/: Animation.cpp  Animation.hpp  DebugDrawer.cpp  DebugDrawer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshObj.cpp  MeshObj.hpp  Node.hpp  Primitive.cpp  Primitive.hpp  Skin.hpp
src/Engine/Resources/: TextureResource.cpp  TextureResource.hpp
src/Engine/ShaderPrograms/: CubeMapShaderProgram.cpp  CubeMapShaderProgram.hpp  InstancedShaderProgram.cpp  InstancedShaderProgram.hpp  LightingShaderProgram.cpp  LightingShaderProgram.hpp  MeshShaderProgram.cpp  MeshShaderProgram.hpp  QuadShaderProgram.cpp  QuadShaderProgram.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SimpleShaderProgram.cpp  SimpleShaderProgram.hpp
src/Engine/Textures/: Texture.cpp
src/Engine/Types/: LightTypes.hpp
src/Engine/include/: API.hpp  engine_api.hpp
src/Game/: CMakeLists.txt  FunctionsSetup.cs  Game.c  Game.cpp  Game.cs  Game.csproj  Game.hpp  Game.v  Game_wasm.csproj  Gui.cpp  Gui.hpp  IGame.cs  Input.c  Input.v  InputManager.cpp  InputManager.cs  InputManager.hpp  NativeLibrary.cs  Player.v  Window.cpp  Window.hpp
src/Game/Entities/: Player.cs
src/Game/include/: game_api.hpp
tests/: CMakeLists.txt  ecs_tests.cpp
